--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -24,3 +24,32 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+.timer {
+  display: flex;
+  justify-content: start;
+  
+ 
+}
+
+.field{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 16px;
+}
+
+.value {
+  font-size: 40px;
+  font-weight: 400;
+  line-height: 48px;
+  
+}
+.label {
+  /* font-family: Montserrat; */
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: center;
+    color: #2E2F42;
+}
