--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -59,11 +59,36 @@ width: 75px;
   line-height: 48px;
   
 }
+
+fieldset {
+width: 360px;
+  height: 78px;
+ 
+  }
+
+
 .label {
-  /* font-family: Montserrat; */
+display: flex;
+flex-wrap: wrap;
+ width: 360px;
+ height: 72px;
+ top: 36px;
+ left: 156px;
+ gap: 8px;
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
     text-align: center;
     color: #2E2F42;
+}
+.btn {
+  background-color: #4E75FF;;
+  
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
 }
