--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -83,12 +83,15 @@ flex-wrap: wrap;
 }
 .btn {
   background-color: #4E75FF;;
-  
+  width: 360px;
+  height: 40px;
+  gap: 10px;
   border: none;
   color: white;
-  padding: 15px 32px;
+  padding: 8px 16px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+  border-radius: 8px;
 }
