--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -44,16 +44,21 @@ width: 75px;
 .timer {
   display: flex;
   justify-content: start;
+  width: 346px;
+  height: 72px;
   }
 
 .field{
-  display: flex;
+  width: 55px;
+  height: 72px;
   flex-direction: column;
   align-items: center;
+  justify-items: center;
   padding: 0 16px;
 }
 
 .value {
+
   font-size: 40px;
   font-weight: 400;
   line-height: 48px;
